--- a/package.json
+++ b/package.json
@@ -15,18 +15,17 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@craco/craco": "^6.0.0"
+    "@babel/core": "^7.11.6"
   },
   "engines": {
     "node": "14",
     "npm": "8"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "craco eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
