--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "private": true,
   "dependencies": {
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "mobx": "4.15.7",
-    "mobx-react": "^6.3.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "4.0.1",
-    "typescript": "^3.8.3",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "mobx": "^6.10.0",
+    "mobx-react": "^9.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
